[gd_scene load_steps=8 format=3 uid="uid://ckvtf5ev0tvag"]

[ext_resource type="Script" path="res://Menu/bullet_red.gd" id="1_m248q"]
[ext_resource type="Texture2D" uid="uid://n6i1fkulegho" path="res://Sprites/SpriteSheetAllV1.png" id="2_amw75"]

[sub_resource type="Animation" id="Animation_g2f8p"]
resource_name = "Default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [41, 3]
}

[sub_resource type="Animation" id="Animation_1of4o"]
resource_name = "Explocion"
length = 0.35
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.28, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 24, 37, 50, 12, 25, 38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14, 0.26, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(3, 3), Vector2(4, 4), Vector2(8, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.14, 0.26, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(5, 5), Vector2(6, 6), Vector2(7, 7)]
}

[sub_resource type="Animation" id="Animation_8fn20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmi64"]
_data = {
"Default": SubResource("Animation_g2f8p"),
"Explocion": SubResource("Animation_1of4o"),
"RESET": SubResource("Animation_8fn20")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ins3w"]
radius = 11.0

[node name="BulletRed" type="Area2D"]
script = ExtResource("1_m248q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(7, 7)
texture = ExtResource("2_amw75")
hframes = 13
vframes = 4
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_mmi64")
}
autoplay = "Default"

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1.5, 3)
scale = Vector2(1.05, 1.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(8, 8)
shape = SubResource("CircleShape2D_ins3w")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
